--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
       <scope>provided</scope>
     </dependency>
     <!-- Add dependency on jira-core if you want access to JIRA implementation classes as well as the sanctioned API. -->
-    <!-- This is not normally recommended, but may be required eg when migrating a plugin originally developed against JIRA 
+    <!-- This is not normally recommended, but may be required eg when migrating a plugin originally developed against JIRA
       4.x -->
 
     <dependency>
@@ -81,7 +81,7 @@
       <version>1.3.0</version>
       <scope>provided</scope>
     </dependency>
-  
+
     <dependency>
       <groupId>com.atlassian.jwt</groupId>
       <artifactId>jwt-api</artifactId>
@@ -92,7 +92,7 @@
       <artifactId>jwt-core</artifactId>
       <version>1.5.3</version>
     </dependency>
-  
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
@@ -136,7 +136,7 @@
       <artifactId>zt-zip</artifactId>
       <version>1.9</version>
     </dependency>
-        
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -182,6 +182,7 @@
           <!-- Uncomment to install TestKit backdoor in JIRA. -->
           <!-- <pluginArtifacts> <pluginArtifact> <groupId>com.atlassian.jira.tests</groupId> <artifactId>jira-testkit-plugin</artifactId>
             <version>${testkit.version}</version> </pluginArtifact> </pluginArtifacts> -->
+          <compressResources>false</compressResources>
         </configuration>
       </plugin>
       <plugin>
